ks8/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: catelogservice
spec:  
  selector:
    app: catelogservice
  ports:
    - name: catelogservice
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
