ks8/service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:  
  selector:
    app: catalogservice
  ports:
    - name: catalogservice
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
