ks8/service-comm.yaml
apiVersion: v1
kind: Service
metadata:
  name: communicationservice
spec:  
  selector:
    app: communicationservice
  ports:
    - name: communicationservice
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
