ks8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
      - image: demomicroservice.azurecr.io/productservice:latest 
        name: productservice        
        ports:
        - containerPort: 80
          name: productservice

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/catalogapi
        pathType: Prefix
        backend:
          service:
            name: catalogservice-clusterip-serv
            port:
              number: 80
