ks8/ingress-srv-comm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: commservice
  labels:
    app: commservice
spec:
  containers:
  - image: nikkuaryan/commservice
    name: commservice-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: communicationservice-clusterip-serv
spec:
  selector:
    app: commservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commservice
spec:
  ingressClassName: nginx
  rules:
  - host: demo.acme.com 
    http:
      paths:
      - path: /api/CommunicationAPI
        backend:
          service:
            name: commservice
            port:
              number: 80
        pathType: Exact
