ks8/ingress-srv1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: catalogservice
  labels:
    app: catalogservice
spec:
  containers:
  - image: nikkuaryan/catalogservice
    name: catalogservice-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:
  selector:
    app: catalogservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogservice
spec:
  ingressClassName: nginx
  rules:
  - host: demo.acme.com 
    http:
      paths:
      - path: /api/catalogapi
        backend:
          service:
            name: catalogservice
            port:
              number: 80
        pathType: Exact
